# Pysticky

./: .gitignore  .pre-commit-config.yaml  .pystarter.json  ARCHITECTURE.en.md  ARCHITECTURE.md  BUILD.en.md  BUILD.md  CHANGELOG.en.md  CHANGELOG.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.en.md  SECURITY.md  build.bat  build.ps1  pyproject.toml  pysticky.spec  pysticky_main.py  requirements.txt  run.py  setup.iss
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_en.md  config.yml  feature_request.md  feature_request_en.md
.github/workflows/: ci.yml
scripts/: generate_demo.py
src/pysticky/: __init__.py  __main__.py  app.py  config.py  main.py
src/pysticky/core/: __init__.py  backstitch_manager.py  color_blindness.py  color_math.py  color_reduce.py  confetti_reduction.py  constants.py  difficulty.py  file_io.py  hoop_planner.py  i18n.py  image_import.py  inventory.py  layer.py  palette.py  pattern.py  pattern_diff.py  project_list.py  session_timer.py  smart_resize.py  snapshots.py  stitch.py  stitch_path_optimizer.py  stitch_shapes.py  thread.py  thread_cross_ref.py  undo.py
src/pysticky/io/: __init__.py  _export_base.py  bundle_export.py  export_cache.py  export_common.py  html_export.py  html_export_pages.py  html_export_sections.py  image_export.py  pdf_export.py  pdf_export_drawings.py  pdf_export_sections.py
src/pysticky/io/formats/: __init__.py  _binary.py  oxs_io.py  pat_import.py  xsd_import.py
src/pysticky/plugins/: __init__.py  api.py
src/pysticky/resources/: symbols.txt
src/pysticky/resources/examples/: demo_kreuzstich.pxs
src/pysticky/resources/i18n/: de.json  en.json
src/pysticky/resources/palettes/: Anchor_Stick_Farben.json  Classic_Colorworks_Farben.json  Cosmo_Stickgarn_Farben.json  DIAMOND_PALETTES.md  DMC_Diamant_Farben.json  DMC_Diamond_Painting_Farben.json  DMC_Farben.json  DMC_Light_Effects_Farben.json  Diamond_Art_Club_Diamond_Painting_Farben.json  Diamond_Dotz_Diamond_Painting_Farben.json  Finca_Stickgarn_Farben.json  Gentle_Art_Sampler_Threads_Farben.json  Madeira_Farben.json  Madeira_Mouline_Farben.json  Madeira_Stickgarn_Farben.json  Mill_Hill_Beads_Farben.json  Olympus_Stickgarn_Farben.json  Riolis_Gamma_Stickgarn_Farben.json  Sullivans_Stickgarn_Farben.json  Valdani_Stickgarn_Farben.json  Venus_Stickgarn_Farben.json  Weeks_Dye_Works_Farben.json
src/pysticky/resources/styles/: dark.qss
src/pysticky/ui/: __init__.py  color_utils.py  diamond_drill_render.py  main_window.py  notify_scope.py  shortcuts_registry.py  styles.py  wheel_guard.py  workspace_profiles.py
src/pysticky/ui/builders/: __init__.py  mw_actions_mixin.py  mw_docks_mixin.py  mw_menus_mixin.py  mw_shortcuts_mixin.py  mw_signals_mixin.py  mw_toolbar_mixin.py
src/pysticky/ui/canvas/: README.md  __init__.py  cache.py  canvas.py  enums.py  optimized_canvas.py  performance.py
src/pysticky/ui/dialogs/: __init__.py  blend_threads_dialog.py  color_harmony_dialog.py  color_management_dialog.py  dialog_sizing.py  grid_options_dialog.py  heatmap_dialog.py  hoop_planner_dialog.py  image_import_dialog.py  image_import_presets.py  inventory_dialog.py  new_project_dialog.py  palette_conversion_dialog.py  pattern_diff_dialog.py  pattern_import_dialog.py  pattern_library_data.py  pattern_library_dialog.py  pattern_preview_dialog.py  pattern_properties_dialog.py  pdf_protect_dialog.py  plugin_dialog.py  replace_color_dialog.py  screen_eyedropper_dialog.py  settings_dialog.py  similar_colors_dialog.py  snapshot_history_dialog.py  statistics_dialog.py  stitch_path_dialog.py  swap_colors_dialog.py  symbol_editor_dialog.py  thumbnail_widget.py  user_template_dialog.py
src/pysticky/ui/handlers/: __init__.py  autosave_handlers.py  edit_handlers.py  export_handlers.py  file_handlers.py  misc_handlers.py  panel_handlers.py  selection_handlers.py  tool_handlers.py  undo_handlers.py  view_handlers.py
src/pysticky/ui/icons/: __init__.py  icon_provider.py
src/pysticky/ui/panels/: __init__.py  backstitch_options_panel.py  gradient_options_panel.py  info_panel.py  info_panel_widgets.py  layer_panel.py  palette_panel.py  progress_panel.py  text_options_panel.py  thread_panel.py  tile_preview_panel.py
src/pysticky/ui/rendering/: __init__.py  preview_render_engine.py
src/pysticky/ui/tools/: __init__.py  backstitch_tool.py  base_tool.py  ellipse_tool.py  eraser_tool.py  fill_tool.py  gradient_tool.py  lasso_select_tool.py  line_tool.py  move_tool.py  pencil_tool.py  pipette_tool.py  polygon_tool.py  progress_tool.py  rect_tool.py  select_tool.py  text_tool.py  tool_enum.py  (+1 more)
src/pysticky/utils/: __init__.py  errors.py  logging.py  numeric.py  os_open.py
tests/: conftest.py  test_accessibility_audit_2026_07.py  test_autosave_batch_race.py  test_autosave_recovery.py  test_background_thread_close_guards.py  test_backstitch.py  test_backstitch_colorblind.py  test_backstitch_mirror.py  test_backstitch_mirror_integration.py  test_backstitch_options_panel_theme.py  test_backstitch_options_panel_wiring.py  test_backstitch_tool_bounds.py  test_batch_active_tool_switch.py  test_batch_performance.py  test_beads.py  test_beadwork.py  test_blend_shopping_and_thread_tab.py  test_blended_thread.py  test_bundle_export.py  test_canvas.py  test_canvas_backstitch_start_point_color.py  test_canvas_container_scrollbar_sync.py  test_canvas_mirror.py  test_canvas_settings_wiring.py  test_chunk_cache_invalidation.py  test_chunk_cache_low_zoom.py  test_clear_layer_requested_handler.py  test_color_bar_selection_identity.py  test_color_bar_tooltip_i18n.py  test_color_button_i18n.py  test_color_management_dialog.py  test_color_math.py  test_color_reduce.py  test_colors_settings_wiring.py  test_colors_tab_default_palette.py  test_colors_tab_diamond_mode.py  test_confetti_reduction.py  test_core.py  test_crop_preview_i18n.py  test_crop_preview_widget.py  (+159 more)
(+56 files in other folders)
